# BRTLibrary_Examples

./: .gitmodules  CMakeLists.txt  README.md
example_1_basic_spatialisation_rtaudio/: CMakeLists.txt  README.md
example_1_basic_spatialisation_rtaudio/projects/vstudio/: BRTLibrary.vcxproj  BRTLibrary.vcxproj.filters  BasicSpatialisationRTAudio.vcxproj  BasicSpatialisationRTAudio.vcxproj.filters  BasicSpatializationRTAudio.sln  rtaudio.vcxproj
example_1_basic_spatialisation_rtaudio/resources/: NearFieldCompensation_ILD_44100.sofa  NearFieldCompensation_ILD_48000.sofa  NearFieldCompensation_ILD_96000.sofa
example_1_basic_spatialisation_rtaudio/src/: AppUtils.hpp  BasicSpatialisationRTAudio.cpp  BasicSpatialisationRTAudio.h  ConfigurationA.hpp  ConfigurationB.hpp  ConfigurationC.hpp
example_2_basic_spatialisation_juce/: CMakeLists.txt  README.md
example_2_basic_spatialisation_juce/src/: AudioPlaybackDemo.h  Main.cpp
